syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.ncr.proto.gen";
option java_outer_classname = "Endpoint";

service KdsService{
    rpc Replicate(stream SyncRequest) returns (stream Order) {}
}

message SyncRequest {
    int32 order_id = 1;
    int32 item_count = 2;
    bool is_completed = 3;
}

message Order {
    string order_id = 1;
    int32 item_count = 2;
    string received_time = 3;
    string finished_time = 4;
}
